--- a/_config.yml
+++ b/_config.yml
@@ -72,14 +72,14 @@ netease_comment: false
 
 # Google Analytics
 ga_track_id: 'UA-49627206-1'            # Format: UA-xxxxxx-xx
-ga_domain: huangxuan.me
+ga_domain: mengranli-ali.github.io
 
 
 
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
-sidebar-about-description: "黄玄，前端娱乐圈 NPC，编程语言/编译器初心者 <br> An UI/Frontend dev & designer accidentally growing into a compiler/PL hacker."
-sidebar-avatar: /img/avatar-hux-ny.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
+sidebar-about-description: "Mengran Li, 李梦冉 <br> An UI/Frontend dev & designer accidentally growing into a compiler/PL hacker."
+sidebar-avatar: /img/mengranli-profile.jpeg     # use absolute URL, seeing it's used in both `/` and `/about/`
 
 
 
