--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ RSS: false
 github_username:    mengranli-ali
 # twitter_username:   huxpro
 #facebook_username:  huxpro
-#linkedin_username:  mengran-li-mrl
+linkedin_username:  mengran-li-mrl
 
 
 
@@ -78,7 +78,7 @@ ga_domain: mengranli-ali.github.io
 
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
-sidebar-about-description: "Mengran Li, 李梦冉 <br> An UI/Frontend dev & designer accidentally growing into a compiler/PL hacker."
+sidebar-about-description: "Mengran Li, 李梦冉 <br> Based in London. A Developer/Pianist, doing Programmatic Optimisation/Data Science."
 sidebar-avatar: /img/mengranli-profile.jpeg     # use absolute URL, seeing it's used in both `/` and `/about/`
 
 
