--- a/_config.yml
+++ b/_config.yml
@@ -78,7 +78,7 @@ ga_domain: mengranli-ali.github.io
 
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
-sidebar-about-description: "Mengran Li, 李梦冉 <br> Based in London. A Developer/Pianist, doing Programmatic Optimisation/Data Science."
+sidebar-about-description: "Mengran Li, 李梦冉 <br> Based in London. <br> <br>A Developer/Pianist, doing Programmatic Optimisation/Data Science.<br>"
 sidebar-avatar: /img/mengranli-profile.jpeg     # use absolute URL, seeing it's used in both `/` and `/about/`
 
 
