--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: Mengran's Blog
 SEOTitle: 李梦冉的博客 | Mengran's Blog
-header-img: img/home-bg.jpg
+header-img: img/homepage-bg-pic.jpg
 email: limengran257@gmail.com
 description: "Based in London"
 keyword: "Python, 博客, 个人网站, 互联网, Web, JavaScript, 前端, 设计"
@@ -30,7 +30,7 @@ paginate: 10
 exclude: ["less","node_modules","Gruntfile.js","package.json","README.md","README.zh.md"]
 anchorjs: true                          # if you want to customize anchor. check out line:181 of `post.html`
 # If you have timezone issue (e.g. #68) in China, uncomment to use this:
-#timezone: CN  
+timezone: GB
 
 
 
@@ -101,4 +101,4 @@ page-mathjax: false
 
 
 # Friends
-friends: []
+# friends: []
