--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-    "name": "hux-blog",
-    "title": "Hux Blog",
-    "author": "Hux <huxpro@gmail.com>",
+    "name": "mengran-blog",
+    "title": "Mengran's Blog",
+    "author": "Mengran <limengran257@gmail.com>",
     "version": "1.8.2",
     "homepage": "http://huxpro.github.io",
     "repository": {
