--- a/package.json
+++ b/package.json
@@ -3,12 +3,12 @@
     "title": "Mengran's Blog",
     "author": "Mengran <limengran257@gmail.com>",
     "version": "1.8.2",
-    "homepage": "http://huxpro.github.io",
+    "homepage": "https://www.mengran.co.uk/",
     "repository": {
         "type": "git",
-        "url": "https://github.com/Huxpro/huxpro.github.io"
+        "url": "https://github.com/mengranli-ali/mengranli-ali.github.io"
     },
-    "bugs": "https://github.com/Huxpro/huxpro.github.io/issues",
+    "bugs": "https://github.com/mengranli-ali/mengranli-ali.github.io/issues",
     "devDependencies": {
         "grunt": ">=1.3.0",
         "grunt-banner": "~0.2.3",
