--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ header-style: text
 header-mask: 0.3
 email: limengran257@gmail.com
 description: "Based in London"
-keyword: "Python, 博客, 个人网站, 互联网, Web, JavaScript, 前端, 设计"
+keyword: "Python, 博客, 个人网站, 互联网, Web, Data Science, 前端, 设计"
 url: "https://mengranli-ali.github.io"              # your host, for absolute URL
 baseurl: ""                             # for example, '/blog' if your blog hosted on 'host/blog'
 
