--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ baseurl: ""                             # for example, '/blog' if your blog host
 future: true
 
 # SNS settings
-RSS: false
+RSS: true
 # weibo_username:     huxpro
 # zhihu_username:     huxpro
 github_username:    mengranli-ali
