--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ header-mask: 0.3
 email: limengran257@gmail.com
 description: "Based in London"
 keyword: "Python, 博客, 个人网站, 互联网, Web, Data Science, 前端, 设计"
-url: "https://mengranli-ali.github.io"              # your host, for absolute URL
+url: "https://www.mengran.co.uk"              # your host, for absolute URL
 baseurl: ""                             # for example, '/blog' if your blog hosted on 'host/blog'
 
 # Publish posts or collection documents with a future date.
